[project]
name = "flask_file_app"
version = "0.1.0"
description = "A simple Flask app for animal image display and file uploads."
dependencies = [
    "flask",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
]
